--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vasyl Pryimachuk",
   "license": "Apache-2.0",
   "devDependencies": {
+    "envify": "^2.0.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
     "grunt-contrib-clean": "^0.5.0",
@@ -33,9 +34,19 @@
   "dependencies": {
     "color": "^0.7.1",
     "curry": "^1.2.0",
+    "immutable": "^2.0.3",
     "iscroll": "^5.1.2",
+    "jsonp": "0.0.4",
     "moment": "^2.7.0",
+    "moment-duration-format": "^1.3.0",
+    "page": "^1.3.7",
     "react": "^0.11.1",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "when": "^3.4.2"
+  },
+  "browserify": {
+    "transform": [
+      "envify"
+    ]
   }
 }
