--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "color": "^0.7.1",
     "curry": "^1.2.0",
+    "debug": "^1.0.4",
     "immutable": "^2.0.3",
     "iscroll": "^5.1.2",
     "jsonp": "0.0.4",
