--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vasyl Pryimachuk",
   "license": "Apache-2.0",
   "devDependencies": {
+    "browserify-shim": "^3.6.0",
     "envify": "^2.0.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.4",
@@ -48,7 +49,11 @@
   },
   "browserify": {
     "transform": [
-      "envify"
+      "envify",
+      "browserify-shim"
     ]
+  },
+  "browserify-shim": {
+    "sound-manager": "global:soundManager"
   }
 }
