--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/Release
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
-node_modules
-build/
+node_modules/*
+!node_modules/app
 nw/
-dist/
+public/
