--- a/package.json
+++ b/package.json
@@ -3,35 +3,31 @@
   "version": "0.0.0",
   "description": "Music player",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha -R spec",
-    "postinstall": "grunt linkapp"
-  },
   "keywords": [
     "music"
   ],
   "author": "Vasyl Pryimachuk",
   "license": "Apache-2.0",
   "devDependencies": {
-    "browserify-shim": "^3.6.0",
-    "envify": "^2.0.1",
+    "css-loader": "^0.8.0",
+    "exports-loader": "^0.6.2",
+    "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^2.1.4",
     "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-stylus": "^0.18.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-node-webkit-builder": "^0.1.21",
     "grunt-notify": "^0.3.0",
     "grunt-svgstore": "^0.3.3",
-    "grunt-watchify": "^0.1.0",
+    "imports-loader": "^0.6.3",
     "jit-grunt": "^0.7.0",
     "jshint-stylish": "^0.4.0",
-    "time-grunt": "^0.4.0"
+    "mocha": "^1.21.4",
+    "style-loader": "^0.8.0",
+    "stylus-loader": "^0.4.0",
+    "time-grunt": "^1.0.0",
+    "webpack": "^1.4.3",
+    "webpack-dev-server": "^1.6.5"
   },
   "dependencies": {
     "color": "^0.7.1",
@@ -47,13 +43,10 @@
     "underscore": "^1.6.0",
     "when": "^3.4.2"
   },
-  "browserify": {
-    "transform": [
-      "envify",
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "sound-manager": "global:soundManager"
+  "scripts": {
+    "test": "mocha -R spec",
+    "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
+    "dist": "grunt build-dist && webpack -p --progress",
+    "nw": "grunt build-dist && webpack -p --progress --target node-webkit && grunt nodewebkit"
   }
 }
