--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "color": "^0.7.1",
     "curry": "^1.2.0",
     "debug": "^1.0.4",
+    "http-server": "^0.7.1",
     "immutable": "^2.0.3",
     "iscroll": "^5.1.2",
     "jsonp": "0.0.4",
@@ -44,6 +45,7 @@
     "when": "^3.4.2"
   },
   "scripts": {
+    "start": "http-server _public",
     "test": "mocha -R spec",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
     "dist": "grunt build-dist && webpack -p --progress",
