--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "underscore": "^1.6.0",
     "when": "^3.4.2"
   },
+  "engines": {
+    "node": "0.10.x"
+  },
   "scripts": {
-    "start": "http-server _public -a 127.0.0.1",
+    "start": "http-server _public",
     "test": "mocha -R spec",
     "build": "grunt build && webpack -p --progress",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
