--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
   },
   "dependencies": {
     "color": "^0.7.1",
+    "colors": "^0.6.2",
     "curry": "^1.2.0",
     "debug": "^1.0.4",
-    "http-server": "^0.7.1",
     "immutable": "^2.0.3",
     "iscroll": "^5.1.2",
     "jsonp": "0.0.4",
+    "mime": "^1.2.11",
     "moment": "^2.7.0",
     "moment-duration-format": "^1.3.0",
+    "node-static": "^0.7.6",
     "page": "^1.3.7",
     "react": "^0.11.1",
     "underscore": "^1.6.0",
@@ -49,7 +51,7 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "start": "http-server _public",
+    "start": "node server.js",
     "test": "mocha -R spec",
     "build": "grunt build && webpack -p --progress",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
