--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mime": "^1.2.11",
     "moment": "^2.7.0",
     "moment-duration-format": "^1.3.0",
+    "newrelic": "^1.11.3",
     "node-static": "^0.7.6",
     "page": "^1.3.7",
     "react": "^0.11.1",
