--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "test": "mocha -R spec",
     "build": "grunt build && webpack -p --progress",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
-    "nw": "grunt build && webpack -p --progress --target node-webkit && grunt nodewebkit"
+    "nw": "grunt build && webpack -p --progress --target node-webkit && grunt nodewebkit",
+    "heroku-deploy": "git clean -x -d -f && slc build && git push heroku deploy:master"
   }
 }
