--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vasyl Pryimachuk",
   "license": "Apache-2.0",
   "devDependencies": {
+    "chai": "^1.9.2",
     "css-loader": "^0.8.0",
     "esnext-loader": "^1.0.0",
     "exports-loader": "^0.6.2",
@@ -54,7 +55,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "mocha -R spec",
+    "test": "mocha -R spec --recursive test/",
     "build": "grunt build && webpack -p --progress",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
     "nw": "grunt build && webpack -p --progress --target node-webkit && grunt nodewebkit",
