--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "build": "grunt build && webpack -p --progress",
     "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
     "nw": "grunt build && webpack -p --progress --target node-webkit && grunt nodewebkit",
-    "heroku-deploy": "git clean -x -d -f && slc build && git push heroku deploy:master"
+    "heroku-build": "git clean -x -d -f && slc build",
+    "heroku-config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
+    "heroku-deploy": "npm run heroku-config && env $(cat .env | xargs) npm run heroku-build && git push heroku deploy:master"
   }
 }
