--- a/package.json
+++ b/package.json
@@ -15,19 +15,12 @@
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-node-webkit-builder": "^0.1.21",
-    "grunt-notify": "^0.3.0",
     "grunt-svgstore": "^0.3.3",
     "imports-loader": "^0.6.3",
-    "jit-grunt": "^0.7.0",
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
     "style-loader": "^0.8.0",
     "stylus-loader": "^0.4.0",
-    "time-grunt": "^1.0.0",
     "webpack": "^1.4.3",
     "webpack-dev-server": "^1.6.5"
   },
@@ -55,9 +48,24 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha -R spec --recursive test/",
-    "build": "grunt build && webpack -p --progress",
-    "dev": "grunt build-dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
-    "nw": "grunt build && webpack -p --progress --target node-webkit && grunt nodewebkit",
+
+    "clean:build": "rm -rf build",
+    "clean:public": "rm -rf _public",
+
+    "copy:assets": "cp -R src/assets ./_public",
+    "copy:vendor:dev": "cp vendor/soundmanager2.js _public/soundmanager2.js",
+    "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js _public/soundmanager2.js",
+
+    "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
+    "nwbuild": "nwbuild -p mac -o nw _public",
+
+    "build:prepare": "npm run lint && npm run clean:build && npm run clean:public && npm run copy:assets",
+    "build:dev": "npm run build:prepare && npm run copy:vendor:dev && grunt build && npm run clean:build",
+    "build:nw": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress --targe node-webkit && npm run nwbuild",
+    "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress && npm run clean:build",
+
+    "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
+
     "heroku-build": "git clean -x -d -f && slc build",
     "heroku-config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
     "heroku-deploy": "npm run heroku-config && env $(cat .env | xargs) npm run heroku-build && git push heroku deploy:master"
