--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
     "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
     "heroku-build": "git clean -x -d -f && slc build",
     "heroku-config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
-    "heroku-deploy": "npm run heroku-config && env $(cat .env | xargs) npm run heroku-build && git push heroku deploy:master"
+    "heroku-deploy": "npm run heroku-config && env $(cat .env | xargs) npm run heroku-build && git push heroku deploy:master -f"
   }
 }
