--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "page": "^1.3.7",
     "react": "^0.11.1",
     "underscore": "^1.6.0",
+    "uuid": "^2.0.1",
     "when": "^3.4.2"
   },
   "engines": {
