--- a/package.json
+++ b/package.json
@@ -48,25 +48,32 @@
   },
   "scripts": {
     "start": "node server.js",
+
     "test": "npm run build:test && mocha test/app.js",
     "test-server": "mocha -w test/app.js",
     "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
+
     "clean:build": "rm -rf build",
     "clean:public": "rm -rf _public",
+
     "copy:assets": "cp -R src/assets ./_public",
     "copy:vendor:dev": "cp vendor/soundmanager2.js _public/soundmanager2.js && cp vendor/pouchdb-3.0.6.min.js _public/pouchdb.js",
     "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js _public/soundmanager2.js && cp vendor/pouchdb-3.0.6.min.js _public/pouchdb.js",
-    "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
+
     "nwbuild": "nwbuild -p mac -o nw _public",
     "build:prepare": "npm run lint && npm run clean:build && npm run clean:public && npm run copy:assets",
     "build:dev": "npm run build:prepare && npm run copy:vendor:dev && grunt build && npm run clean:build",
     "build:nw": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress --targe node-webkit && npm run nwbuild",
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
+    "build:heroku": "git clean -x -d -f && slc build",
     "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress && npm run clean:build",
+
+    "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
     "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
-    "heroku-build": "git clean -x -d -f && slc build",
-    "heroku-config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
-    "heroku-deploy": "npm run heroku-config && env $(cat .env | xargs) npm run heroku-build && git push heroku deploy:master -f",
-    "divshot-deploy": "MUSIC_APP_ID=4656659 npm run build && divshot push"
+    "heroku:config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
+
+    "deploy:heroku": "npm run heroku:config && env $(cat .env | xargs) npm run build:heroku && git push heroku deploy:master -f",
+    "deploy:divshot": "MUSIC_APP_ID=4656659 npm run build && divshot push production",
+    "deploy:divshot:dev": "MUSIC_APP_ID=4656659 npm run build && divshot push development"
   }
 }
