--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-svgstore": "^0.3.3",
     "imports-loader": "^0.6.3",
     "jshint-stylish": "^0.4.0",
+    "jsx-loader": "^0.12.2",
     "mocha": "^1.21.4",
     "style-loader": "^0.8.0",
     "stylus-loader": "^0.4.0",
@@ -48,18 +49,14 @@
   },
   "scripts": {
     "start": "node server.js",
-
     "test": "npm run build:test && mocha test/app.js",
     "test-server": "mocha -w test/app.js -R dot",
     "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
-
     "clean:build": "rm -rf build",
     "clean:public": "rm -rf _public",
-
     "copy:assets": "cp -R src/assets ./_public",
     "copy:vendor:dev": "cp vendor/soundmanager2.js _public/soundmanager2.js && cp vendor/pouchdb-3.0.6.min.js _public/pouchdb.js && cp vendor/firebase-2.0.5.js _public/firebase.js",
     "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js _public/soundmanager2.js && cp vendor/pouchdb-3.0.6.min.js _public/pouchdb.js && cp vendor/firebase-2.0.5.js _public/firebase.js",
-
     "nwbuild": "nwbuild -p mac -o nw _public",
     "build:prepare": "npm run lint && npm run clean:build && npm run clean:public && npm run copy:assets",
     "build:dev": "npm run build:prepare && npm run copy:vendor:dev && grunt build && npm run clean:build",
@@ -67,11 +64,9 @@
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
     "build:heroku": "git clean -x -d -f && slc build",
     "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --debug --devtool source-map --progress && npm run clean:build",
-
     "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
     "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool source-map --output-pathinfo",
     "heroku:config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
-
     "deploy:heroku": "npm run heroku:config && env $(cat .env | xargs) npm run build:heroku && git push heroku deploy:master -f",
     "deploy:divshot": "MUSIC_APP_ID=4656659 npm run build && divshot push production",
     "deploy:divshot:dev": "MUSIC_APP_ID=4656659 npm run build && divshot push development"
