--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "curry": "^1.2.0",
     "debug": "^1.0.4",
     "immutable": "^3.5.0",
+    "impulse": "^0.1.0",
     "iscroll": "^5.1.2",
     "jsonp": "0.0.4",
     "mime": "^1.2.11",
