Add missing dependencies: grunt-cli, jshint

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-svgstore": "^0.3.3",
     "imports-loader": "^0.6.3",
+    "jshint": "^2.6.0",
     "jshint-stylish": "^0.4.0",
     "jsx-loader": "^0.12.2",
     "mocha": "^1.21.4",
