--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "newrelic": "^1.11.3",
     "node-static": "^0.7.6",
     "page": "^1.3.7",
-    "react": "^0.12.2",
-    "underscore": "^1.6.0",
+    "react": "0.13.0-rc1",
+    "underscore": "^1.8.0",
     "uuid": "^2.0.1",
     "when": "^3.4.2"
   },
