--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build:nw": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress --targe node-webkit && npm run nwbuild",
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
     "build:heroku": "git clean -x -d -f && slc build",
-    "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --debug --devtool source-map --progress && npm run clean:build",
+    "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && NODE_ENV=production webpack -p --debug --devtool source-map --progress && npm run clean:build",
     "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
     "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo",
     "heroku:config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
