--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "build:heroku": "git clean -x -d -f && slc build",
     "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && NODE_ENV=production webpack -p --debug --devtool source-map --progress && npm run clean:build",
     "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
-    "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo",
+    "dev": "npm run build:dev && webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline",
     "heroku:config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
     "deploy": "npm run deploy:divshot",
     "deploy:heroku": "npm run heroku:config && env $(cat .env | xargs) npm run build:heroku && git push heroku deploy:master -f",
