Build chromeapp into separate folder

--- a/package.json
+++ b/package.json
@@ -54,42 +54,48 @@
   "engines": {
     "node": "0.10.x"
   },
+  "config": {
+    "webapp:output": "_public",
+    "chromeapp:output": "_chromeapp"
+  },
   "scripts": {
     "start": "node server.js",
     "test": "npm run build:test && mocha test/app.js",
-    "test-server": "mocha -w test/app.js -R dot",
-    "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
-    "clean:build": "rm -rf build",
-    "clean:public": "rm -rf _public",
-    "copy:assets": "cp -R src/assets ./_public",
-    "copy:vendor:dev": "cp vendor/soundmanager2.js _public/soundmanager2.js",
-    "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js _public/soundmanager2.js",
-    "copy:chromeapp": "cp -R src/chromeapp/assets/* _public",
-    "nwbuild": "nwbuild -p mac -o nw _public",
-
-    "build:prepare": "npm run lint && npm run clean:build && npm run clean:public && npm run copy:assets",
-    "build:dev": "npm run build:prepare && npm run copy:vendor:dev && grunt build && npm run clean:build",
-    "build:nw": "npm run build:prepare && npm run copy:vendor:prod && grunt build && webpack -p --progress --targe node-webkit && npm run nwbuild",
-    "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
-    "build:heroku": "git clean -x -d -f && slc build",
-    "build": "npm run build:prepare && npm run copy:vendor:prod && grunt build && npm run clean:build && npm run webpack:webapp",
-    "build:chromeapp": "npm run build:prepare && npm run copy:vendor:prod && npm run copy:chromeapp && grunt build && npm run clean:build && npm run webpack:chromeapp",
-
+    "build": "npm run build:webapp",
+    "dev": "npm run dev:webapp",
+    "deploy": "npm run deploy:divshot",
     "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
 
+    "test-server": "mocha -w test/app.js -R dot",
+    "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
+
+    "dev:webapp": "npm run prebuild:webapp && npm run copy:webapp:dev && npm run webpack:webapp-dev",
+    "dev:chromeapp": "npm run prebuild:chromeapp && npm run copy:chromeapp:dev && npm run webpack:chromeapp-dev",
+
+    "build:webapp": "npm run copy:webapp && npm run webpack:webapp",
+    "build:chromeapp": "npm run copy:chromeapp && npm run webpack:chromeapp",
+    "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
+    "prebuild:webapp": "npm run clean:build && npm run clean:webapp && mkdir $npm_package_config_webapp_output && npm run lint && grunt build --output-dir=$npm_package_config_webapp_output && npm run clean:build",
+    "prebuild:chromeapp": "npm run clean:build && npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output && npm run lint && grunt build --output-dir=$npm_package_config_chromeapp_output && npm run clean:build",
+
+    "clean:build": "rm -rf build",
+    "clean:webapp": "rm -rf $npm_package_config_webapp_output",
+    "clean:chromeapp": "rm -rf $npm_package_config_chromeapp_output",
+
+    "copy:assets": "cp -R src/assets $COPY_DEST",
+    "copy:vendor:dev": "cp vendor/soundmanager2.js $COPY_DEST/soundmanager2.js",
+    "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js $COPY_DEST/soundmanager2.js",
+    "copy:webapp": "COPY_DEST=$npm_package_config_webapp_output npm run copy:vendor:prod && COPY_DEST=$npm_package_config_webapp_output npm run copy:assets",
+    "copy:webapp:dev": "COPY_DEST=$npm_package_config_webapp_output npm run copy:vendor:dev && COPY_DEST=$npm_package_config_webapp_output npm run copy:assets",
+    "copy:chromeapp": "COPY_DEST=$npm_package_config_chromeapp_output npm run copy:vendor:prod && COPY_DEST=$npm_package_config_chromeapp_output npm run copy:assets && cp -R src/chromeapp/assets/* $npm_package_config_chromeapp_output",
+    "copy:chromeapp:dev": "COPY_DEST=$npm_package_config_chromeapp_output npm run copy:vendor:dev && COPY_DEST=$npm_package_config_chromeapp_output npm run copy:assets &&  cp -R src/chromeapp/assets/* $npm_package_config_chromeapp_output",
+
     "webpack:webapp": "NODE_ENV=production webpack --entry=./src/main-webapp.js -p --debug --devtool source-map --progress",
-    "webpack:webapp-dev": "webpack-dev-server --entry=./src/main-webapp.js --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline",
-    "webpack:chromeapp": "MUSIC_APP_ID=4812383 NODE_ENV=production webpack --entry=./src/main-chromeapp.js --debug --devtool source-map --progress",
-    "webpack:chromeapp-dev": "MUSIC_APP_ID=4812383 webpack --entry=./src/main-chromeapp.js --watch --debug --devtool source-map --progress",
+    "webpack:webapp-dev": "webpack-dev-server --entry=./src/main-webapp.js --progress --colors --port=5003 --content-base=$npm_package_config_webapp_output --debug --devtool eval-source-map --output-pathinfo --inline",
+    "webpack:chromeapp": "MUSIC_APP_ID=4812383 NODE_ENV=production webpack --entry=./src/main-chromeapp.js --output-path=$npm_package_config_chromeapp_output --debug --devtool source-map --progress",
+    "webpack:chromeapp-dev": "MUSIC_APP_ID=4812383 webpack --entry=./src/main-chromeapp.js --output-path=$npm_package_config_chromeapp_output --watch --debug --devtool source-map --progress",
 
-    "dev": "npm run build:dev && npm run webpack:webapp-dev",
-    "dev:chromeapp": "npm run build:prepare && npm run copy:vendor:dev && npm run copy:chromeapp && grunt build && npm run clean:build && npm run webpack:chromeapp-dev",
-
-    "heroku:config": "heroku config:pull MUSIC_APP_ID MUSIC_APP_HOST",
-
-    "deploy": "npm run deploy:divshot",
-    "deploy:heroku": "npm run heroku:config && env $(cat .env | xargs) npm run build:heroku && git push heroku deploy:master -f",
-    "deploy:divshot": "MUSIC_APP_ID=4656659 npm run build && divshot push production",
-    "deploy:divshot:dev": "MUSIC_APP_ID=4656659 npm run build && divshot push development"
+    "deploy:divshot": "MUSIC_APP_ID=4656659 npm run build:webpack && divshot push production",
+    "deploy:divshot:dev": "MUSIC_APP_ID=4656659 npm run build:webapp && divshot push development"
   }
 }
