--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "babel-loader": "^4.1.0",
     "chai": "^1.9.2",
     "css-loader": "^0.8.0",
-    "esnext-loader": "^1.0.0",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
