--- a/src/chromeapp/assets/manifest.json
+++ b/src/chromeapp/assets/manifest.json
@@ -7,6 +7,7 @@
   },
   "permissions": [
     "identity",
+    "storage",
     "https://api.vk.com/method/*",
     "http://fonts.googleapis.com/*"
   ],
