--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "baconjs": "^0.7.22",
+    "classnames": "^1.1.4",
     "colors": "^0.6.2",
     "curry": "^1.2.0",
     "debug": "^1.0.4",
@@ -64,23 +65,18 @@
     "dev": "npm run dev:webapp",
     "deploy": "npm run deploy:divshot",
     "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
-
     "test-server": "mocha -w test/app.js -R dot",
     "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
-
     "dev:webapp": "npm run prebuild:webapp && npm run copy:webapp:dev && npm run webpack:webapp-dev",
     "dev:chromeapp": "npm run prebuild:chromeapp && npm run copy:chromeapp:dev && npm run webpack:chromeapp-dev",
-
     "build:webapp": "npm run copy:webapp && npm run webpack:webapp",
     "build:chromeapp": "npm run copy:chromeapp && npm run webpack:chromeapp && zip -r chromeapp.zip $npm_package_config_chromeapp_output",
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
     "prebuild:webapp": "npm run clean:build && npm run clean:webapp && mkdir $npm_package_config_webapp_output && npm run lint && grunt build --output-dir=$npm_package_config_webapp_output && npm run clean:build",
     "prebuild:chromeapp": "npm run clean:build && npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output && npm run lint && grunt build --output-dir=$npm_package_config_chromeapp_output && npm run clean:build",
-
     "clean:build": "rm -rf build",
     "clean:webapp": "rm -rf $npm_package_config_webapp_output",
     "clean:chromeapp": "rm -rf $npm_package_config_chromeapp_output",
-
     "copy:assets": "cp -R src/assets/* $COPY_DEST",
     "copy:vendor:dev": "cp vendor/soundmanager2.js $COPY_DEST/soundmanager2.js",
     "copy:vendor:prod": "cp vendor/soundmanager2-nodebug-jsmin.js $COPY_DEST/soundmanager2.js",
@@ -88,12 +84,10 @@
     "copy:webapp:dev": "COPY_DEST=$npm_package_config_webapp_output npm run copy:vendor:dev && COPY_DEST=$npm_package_config_webapp_output npm run copy:assets",
     "copy:chromeapp": "COPY_DEST=$npm_package_config_chromeapp_output npm run copy:vendor:prod && COPY_DEST=$npm_package_config_chromeapp_output npm run copy:assets && cp -R src/chromeapp/assets/* $npm_package_config_chromeapp_output",
     "copy:chromeapp:dev": "COPY_DEST=$npm_package_config_chromeapp_output npm run copy:vendor:dev && COPY_DEST=$npm_package_config_chromeapp_output npm run copy:assets &&  cp -R src/chromeapp/assets/* $npm_package_config_chromeapp_output",
-
     "webpack:webapp": "NODE_ENV=production webpack --entry=./src/main-webapp.js -p --debug --devtool source-map --progress",
     "webpack:webapp-dev": "webpack-dev-server --entry=./src/main-webapp.js --progress --colors --port=5003 --content-base=$npm_package_config_webapp_output --debug --devtool eval-source-map --output-pathinfo --inline",
     "webpack:chromeapp": "MUSIC_APP_ID=4812383 NODE_ENV=production webpack --entry=./src/main-chromeapp.js --output-path=$npm_package_config_chromeapp_output --debug --devtool source-map --progress",
     "webpack:chromeapp-dev": "MUSIC_APP_ID=4812383 webpack --entry=./src/main-chromeapp.js --output-path=$npm_package_config_chromeapp_output --watch --debug --devtool source-map --progress",
-
     "deploy:divshot": "MUSIC_APP_ID=4656659 npm run build:webpack && divshot push production",
     "deploy:divshot:dev": "MUSIC_APP_ID=4656659 npm run build:webapp && divshot push development"
   }
