--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-static": "^0.7.6",
     "page": "^1.3.7",
     "react": "0.13.0",
+    "transit-js": "^0.8.773",
     "underscore": "^1.8.0",
     "uuid": "^2.0.1",
     "verror": "^1.6.0",
