--- a/.jshintrc
+++ b/.jshintrc
@@ -7,5 +7,5 @@
   "proto": true,
   "node": true,
   "esnext": true,
-  "predef": [ "-Promise", "chrome", "-Audio"]
+  "predef": [ "-Promise", "chrome", "-Audio", "performance"]
 }
