--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "jshint": "^2.6.0",
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
+    "postcss-loader": "^0.6.0",
     "style-loader": "^0.8.0",
-    "stylus-loader": "^0.4.0",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.7.0"
   },
