--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
     "postcss-loader": "^0.6.0",
+    "postcss-simple-vars": "^1.0.1",
     "style-loader": "^0.8.0",
     "webpack": "^1.7.3",
     "webpack-dev-server": "^1.7.0"
