--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^4.1.0",
     "chai": "^1.9.2",
     "css-loader": "^0.8.0",
+    "divshot-cli": "^1.10.5",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
