--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "newrelic": "^1.11.3",
     "node-static": "^0.7.6",
     "page": "^1.3.7",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "react-motion": "^0.2.7",
     "transit-js": "^0.8.773",
     "underscore": "^1.8.0",
