Using eslint instead jshint

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "chai": "^1.9.2",
     "css-loader": "^0.8.0",
     "divshot-cli": "^1.10.5",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.0.0",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-svgstore": "^0.3.3",
     "imports-loader": "^0.6.3",
-    "jshint": "^2.6.0",
-    "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
     "postcss-loader": "^0.6.0",
     "postcss-simple-vars": "^1.0.1",
@@ -72,7 +72,7 @@
     "build": "npm run build:webapp",
     "dev": "npm run dev:webapp",
     "deploy": "npm run deploy:divshot",
-    "lint": "jshint ./src/**/*.js --reporter node_modules/jshint-stylish/stylish.js",
+    "lint": "eslint src/**",
     "test-server": "mocha -w test/app.js -R dot",
     "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
     "dev:webapp": "npm run prebuild:webapp && npm run copy:webapp:dev && npm run webpack:webapp-dev",
@@ -80,8 +80,8 @@
     "build:webapp": "npm run copy:webapp && npm run webpack:webapp",
     "build:chromeapp": "npm run copy:chromeapp && MUSIC_CHROME_APP_ID=$npm_package_config_chromeapp_id npm run webpack:chromeapp && zip -r chromeapp.zip $npm_package_config_chromeapp_output",
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
-    "prebuild:webapp": "npm run clean:build && npm run clean:webapp && mkdir $npm_package_config_webapp_output && npm run lint && grunt build --output-dir=$npm_package_config_webapp_output && npm run clean:build",
-    "prebuild:chromeapp": "npm run clean:build && npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output && npm run lint && grunt build --output-dir=$npm_package_config_chromeapp_output && npm run clean:build",
+    "prebuild:webapp": "npm run clean:build && npm run clean:webapp && mkdir $npm_package_config_webapp_output && grunt build --output-dir=$npm_package_config_webapp_output && npm run clean:build",
+    "prebuild:chromeapp": "npm run clean:build && npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output && grunt build --output-dir=$npm_package_config_chromeapp_output && npm run clean:build",
     "clean:build": "rm -rf build",
     "clean:webapp": "rm -rf $npm_package_config_webapp_output",
     "clean:chromeapp": "rm -rf $npm_package_config_chromeapp_output",
