Using additional layer to show search results

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "forOf": true,
     "jsx": true,
     "modules": true,
-    "templateStrings": true
+    "templateStrings": true,
+    "classes": true
   },
 
   "rules": {
