Remove unused tests

--- a/package.json
+++ b/package.json
@@ -66,22 +66,18 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "npm run build:test && mocha test/app.js",
     "build": "npm run build:webapp",
     "dev": "npm run dev:webapp",
     "predeploy": "MUSIC_APP_ID=4656659 npm run build:webapp",
     "deploy": "surge -p $npm_package_config_webapp_output -d music.activeobject.me",
     "lint": "eslint src/**",
-    "test-server": "mocha -w test/app.js -R dot",
-    "test-build-server": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js --watch",
     "dev:webapp": "npm run prebuild:webapp && npm run copy:webapp:dev && npm run webpack:webapp-dev",
     "dev:chromeapp": "npm run prebuild:chromeapp && npm run copy:chromeapp:dev && npm run webpack:chromeapp-dev",
     "build:webapp": "npm run copy:webapp && npm run webpack:webapp",
     "build:chromeapp": "npm run copy:chromeapp && MUSIC_CHROME_APP_ID=$npm_package_config_chromeapp_id npm run webpack:chromeapp && zip -r chromeapp.zip $npm_package_config_chromeapp_output",
     "build:test": "webpack --entry=./test/index.js --target node --output-path=test --output-file=app.js",
-    "prebuild:webapp": "npm run clean:build && npm run clean:webapp && mkdir $npm_package_config_webapp_output && npm run clean:build",
-    "prebuild:chromeapp": "npm run clean:build && npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output && npm run clean:build",
-    "clean:build": "rm -rf build",
+    "prebuild:webapp": "npm run clean:webapp && mkdir $npm_package_config_webapp_output",
+    "prebuild:chromeapp": "npm run clean:chromeapp && mkdir $npm_package_config_chromeapp_output",
     "clean:webapp": "rm -rf $npm_package_config_webapp_output",
     "clean:chromeapp": "rm -rf $npm_package_config_chromeapp_output",
     "copy:assets": "cp -R src/assets/* $COPY_DEST",
