Using soundmanager's npm package

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
+    "soundmanager2": "2.97.20150601",
     "transit-js": "^0.8.773",
     "underscore": "^1.8.0",
     "uuid": "^2.0.1",
@@ -63,14 +64,10 @@
     "predeploy": "MUSIC_APP_ID=4656659 npm run build",
     "deploy": "surge -p _public -d music.activeobject.me",
     "lint": "eslint src/**",
-    "dev": "npm run clean && npm run copy-dev && npm run webpack-dev",
+    "dev": "npm run clean && npm run copy && npm run webpack-dev",
     "prebuild": "npm run clean",
     "clean": "rm -rf _public && mkdir _public",
-    "copy": "npm run copy-vendor-prod && npm run copy-assets",
-    "copy-assets": "cp -R src/assets/* _public",
-    "copy-vendor-dev": "cp vendor/soundmanager2.js _public/soundmanager2.js",
-    "copy-vendor-prod": "cp vendor/soundmanager2-nodebug-jsmin.js _public/soundmanager2.js",
-    "copy-dev": "npm run copy-vendor-dev && npm run copy-assets",
+    "copy": "cp -R src/assets/* _public",
     "webpack": "NODE_ENV=production webpack -p --debug --devtool source-map --progress --output-path=_public",
     "webpack-dev": "webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline"
   }
