Using webpack directly in npm build script

--- a/package.json
+++ b/package.json
@@ -60,14 +60,13 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "npm run clean && npm run copy && npm run webpack",
+    "build": "npm run clean && npm run copy && NODE_ENV=production webpack -p --progress",
     "predeploy": "MUSIC_APP_ID=4656659 npm run build",
     "deploy": "surge -p _public -d music.activeobject.me",
     "lint": "eslint src/**",
     "dev": "npm run clean && npm run copy && npm run webpack-dev",
     "clean": "rm -rf _public && mkdir _public",
     "copy": "cp -R src/assets/* _public",
-    "webpack": "NODE_ENV=production webpack -p --debug --devtool source-map --progress",
     "webpack-dev": "webpack-dev-server --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline"
   }
 }
