Remove unused npm dependencies

--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "css-loader": "^0.8.0",
     "eslint": "^1.6.0",
     "eslint-loader": "^1.0.0",
-    "exports-loader": "^0.6.2",
     "expose-loader": "^0.5.3",
-    "imports-loader": "^0.6.3",
-    "mocha": "^1.21.4",
     "postcss-loader": "^0.6.0",
     "postcss-simple-vars": "^1.0.1",
     "react-hot-loader": "^1.3.0",
@@ -34,27 +31,18 @@
   "dependencies": {
     "classnames": "^1.1.4",
     "colors": "^0.6.2",
-    "curry": "^1.2.0",
-    "debug": "^1.0.4",
-    "deep-equal": "^1.0.1",
     "immutable": "^3.5.0",
     "iscroll": "^5.1.2",
     "jsonp": "0.0.4",
     "kefir": "^3.1.0",
     "keymaster": "^1.6.2",
     "mime": "^1.2.11",
-    "newrelic": "^1.11.3",
     "node-static": "^0.7.6",
-    "page": "^1.3.7",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
     "soundmanager2": "2.97.20150601",
-    "transit-js": "^0.8.773",
-    "underscore": "^1.8.0",
-    "uuid": "^2.0.1",
-    "verror": "^1.6.0",
-    "when": "^3.4.2"
+    "underscore": "^1.8.0"
   },
   "engines": {
     "node": "4.2.x"
