--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "style-loader": "^0.8.0",
     "surge": "^0.16.0",
     "svg-sprite-loader": "0.0.11",
-    "webpack": "^1.7.3",
-    "webpack-dev-server": "^1.7.0"
+    "webpack": "2.0.7-beta",
+    "webpack-dev-server": "2.0.0-beta"
   },
   "dependencies": {
     "classnames": "^1.1.4",
