--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "dev": "npm run clean && npm run copy && npm run dev-server",
     "clean": "rm -rf _public && mkdir _public",
     "copy": "cp -R src/assets/* _public",
-    "dev-server": "webpack-dev-server --hot --progress --colors --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline"
+    "dev-server": "webpack-dev-server --hot --progress --port=5003 --content-base=_public --debug --devtool eval-source-map --output-pathinfo --inline"
   }
 }
