--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-motion": "^0.3.1",
+    "react-router": "^2.0.0",
     "soundmanager2": "2.97.20150601"
   },
   "engines": {
